--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.7.0",
+    "emailjs": "^4.0.1",
     "next": "11.1.2",
     "react": "^17.0.2",
     "react-card-flip": "^1.1.5",
