--- a/package.json
+++ b/package.json
@@ -9,17 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@emailjs/browser": "^3.7.0",
     "emailjs": "^4.0.1",
+    "glob": "^7.2.0",
+    "gray-matter": "^4.0.3",
     "next": "11.1.2",
+    "next-mdx-remote": "^3.0.8",
+    "next-sitemap": "^1.9.9",
+    "npm": "^9.2.0",
     "react": "^17.0.2",
     "react-card-flip": "^1.1.5",
     "react-dom": "17.0.2",
     "react-icons": "^4.4.0",
-    "react-reveal": "^1.2.2"
+    "react-reveal": "^1.2.2",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-highlight": "^5.0.2",
+    "rehype-slug": "^5.0.1",
+    "swiper": "^8.4.5",
+    "swr": "^1.3.0",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
+    "@types/glob": "^7.2.0",
+    "@types/react": "^18.0.1",
     "eslint": "^8.1.0",
-    "eslint-config-next": "11.1.2"
+    "eslint-config-next": "11.1.2",
+    "typescript": "^4.5.4"
   }
 }
